# sdd-agy-bigquery-dashboard

./: Dockerfile  PROCESS.md  README.md  configure_terminal.sh  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-07-22-bigquery-integration.md
docs/superpowers/specs/: 2026-07-22-bigquery-integration-design.md
src/: data_service.py  main.py
src/templates/: dashboard.html
tests/: test_api_routes.py  test_data_service.py
