[project]
name = "ecommerce-dashboard"
version = "0.1.0"
description = "E-commerce analytics dashboard with CSV data"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pandas>=2.2.0",
    "jinja2>=3.1.0",
    "google-cloud-bigquery>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]


